--- a/.travis.yml
+++ b/.travis.yml
@@ -146,14 +146,14 @@ script:
 # Build/Install boost
   - if ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
       echo 'Installing boost from cache...';
-      brew install boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz;
+      brew unlink boost && brew install boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz;
     elif ls temp/boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
       echo 'Installing boost from cached homebrew version...';
-      brew install temp/boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz;
+      brew unlink boost && brew install temp/boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz;
       BUILD_BOOST=true;
     else
       echo 'Building homebrew bottle...';
-      travis_wait 40 brew install --build-bottle boost;
+      travis_wait 40 brew unlink boost && brew install --build-bottle boost;
       if [ ! -d temp ]; then
         mkdir temp;
       fi;
