--- a/.travis.yml
+++ b/.travis.yml
@@ -145,30 +145,7 @@ script:
       brew bottle python3;
     fi;
 # Build/Install boost
-  - travis_wait if ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
-      echo 'Installing boost from cache...';
-      BUILD_BOOST=false;
-      brew unlink boost && brew install boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz;
-    elif ls temp/boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
-      echo 'Installing boost from cached homebrew version...';
-      brew unlink boost && brew install temp/boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz;
-      BUILD_BOOST=true;
-    else
-      echo 'Building homebrew bottle...';
-      BUILD_BOOST=false;
-      brew unlink boost && brew install --build-bottle boost;
-      if [ ! -d temp ]; then
-        mkdir temp;
-      fi;
-      pushd temp;
-      brew bottle boost;
-      popd;
-    fi;
-  - travis_wait if [ "$BUILD_BOOST" = true ]; then
-      echo 'Building boost...';
-      ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER;
-      brew bottle boost;
-    fi;
+  - travis_wait 40 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER;
 # Build/Install boost-python
   - if ! ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
       echo 'Not ready to build boost-python';
