--- a/.travis.yml
+++ b/.travis.yml
@@ -148,7 +148,11 @@ script:
     fi;
 # Build/Install boost
   - chmod 744 ../build-boost.sh
+  - if [ -f boost-1.62.0.tar.bz2 ]; then
+      cp boost-1.62.0.tar.bz2 /Users/travis/Library/Caches/Homebrew;
+    fi;
   - travis_wait 45 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER;
+  - cp /Users/travis/Library/Caches/Homebrew/boost-1.62.0.tar.bz2 .
 # Build/Install boost-python
   - if ! ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
       echo 'Not ready to build boost-python';
