--- a/.travis.yml
+++ b/.travis.yml
@@ -168,20 +168,15 @@ script:
   - chmod 744 ../build-boost.sh
   - if [ -f boost-$BOOSTVER.tar.bz2 ]; then
       cp boost-$BOOSTVER.tar.bz2 /Users/travis/Library/Caches/Homebrew;
+      BUILD_BOOST_PYTHON=true;
+    else
+      BUILD_BOOST_PYTHON=false;
     fi;
   - travis_wait 43 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER $BUILD_BOOST;
   - cp /Users/travis/Library/Caches/Homebrew/boost-$BOOSTVER.tar.bz2 .
 # Build/Install boost-python
-  - if ! ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
-      echo 'Not ready to build boost-python';
-      BUILD_BOOST_PYTHON=false;
-    elif ls boost-python-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1> /dev/null 2>&1; then
-      echo 'Installing boost-python from cache...';
-      BUILD_BOOST_PYTHON=false;
-      brew install boost-python-$BOOSTVER.$OSX_NAME.bottle*tar.gz;
-    else
+  - if [ "$BUILD_BOOST_PYTHON" = true ]; then
       echo 'Building homebrew boost-python bottle...';
-      BUILD_BOOST_PYTHON=true;
       brew install --build-bottle boost-python --c++11 --with-python3;
       brew bottle boost-python;
       popd;
