--- a/.travis.yml
+++ b/.travis.yml
@@ -138,7 +138,7 @@ script:
       BUILD_PYTHON=false;
       brew install python3-$PYTHONVER*$OSX_NAME.bottle*tar.gz;
       BUILD_BOOST=true;
-      BUILD_BOOST_PYTHON=true;
+      BUILD_BOOST_PYTHON=false;
     else
       BUILD_PYTHON=true;
     fi;
@@ -168,18 +168,17 @@ script:
   - chmod 744 ../build-boost.sh
   - if [ -f boost-$BOOSTVER.tar.bz2 ]; then
       cp boost-$BOOSTVER.tar.bz2 /Users/travis/Library/Caches/Homebrew;
-      BUILD_BOOST_PYTHON=true;
-    else
-      BUILD_BOOST_PYTHON=false;
     fi;
-  - travis_wait 44 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER $BUILD_BOOST;
+  - if ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
+      BUILD_BOOST_PYTHON=true;
+    fi;
+  - travis_wait 45 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER $BUILD_BOOST;
   - cp /Users/travis/Library/Caches/Homebrew/boost-$BOOSTVER.tar.bz2 .
 # Build/Install boost-python
   - if [ "$BUILD_BOOST_PYTHON" = true ]; then
       echo 'Building homebrew boost-python bottle...';
       brew install --build-bottle boost-python --c++11 --with-python3;
       brew bottle boost-python;
-      popd;
     fi;
 # Make bottles
   - popd
