--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
   - if [ ! -d clang+llvm-$LLVMVER-x86_64-apple-darwin ] ; then
       tar -xf clang+llvm-$LLVMVER-x86_64-apple-darwin.tar.xz;
     fi
-  - cp clang+llvm-$LLVMVER-x86_64-apple-darwin /usr/local/llvm;
+  - cp -rf clang+llvm-$LLVMVER-x86_64-apple-darwin/ /usr/local/llvm/;
   - ls /usr/local/llvm;
   - chmod 744 /usr/local/llvm;
 # Trick the system into using llvm
@@ -166,6 +166,7 @@ script:
   - ls -l
   - if ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
       BUILD_BOOST_PYTHON=true;
+      echo "Will build boost-python...";
     fi;
   - travis_wait 46 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER $BUILD_BOOST;
   - cp /Users/travis/Library/Caches/Homebrew/boost-$BOOSTVER.tar.bz2 .
