--- a/.travis.yml
+++ b/.travis.yml
@@ -160,20 +160,22 @@ script:
     fi;
 # Build/Install boost
   - chmod 744 ../build-boost.sh
-  - if [ -f boost-$BOOSTVER.tar.bz2 ]; then
-      cp boost-$BOOSTVER.tar.bz2 /Users/travis/Library/Caches/Homebrew;
-    fi;
-  - ls -l
-  - if ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
-      BUILD_BOOST_PYTHON=true;
-      echo "Will build boost-python...";
-    fi;
-  - travis_wait 46 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER $BUILD_BOOST;
-  - cp /Users/travis/Library/Caches/Homebrew/boost-$BOOSTVER.tar.bz2 .
+  - brew install boost
+  - BUILD_BOOST_PYTHON=true
+#  - if [ -f boost-$BOOSTVER.tar.bz2 ]; then
+#      cp boost-$BOOSTVER.tar.bz2 /Users/travis/Library/Caches/Homebrew;
+#    fi;
+#  - ls -l
+#  - if ls boost-$BOOSTVER.$OSX_NAME.bottle*tar.gz 1>/dev/null 2>&1; then
+#      BUILD_BOOST_PYTHON=true;
+#      echo "Will build boost-python...";
+#    fi;
+#  - travis_wait 46 ./../build-boost.sh $OSXVER $PYTHONVER $BOOSTVER $BUILD_BOOST;
+#  - cp /Users/travis/Library/Caches/Homebrew/boost-$BOOSTVER.tar.bz2 .
 # Build/Install boost-python
   - if [ "$BUILD_BOOST_PYTHON" = true ]; then
       echo 'Building homebrew boost-python bottle...';
-      brew install --build-bottle boost-python --c++11 --with-python3 --without-python;
+      brew install --build-bottle boost-python --with-python3 --without-python;
       brew bottle boost-python;
     fi;
 # Make bottles
