Adding a sierra build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-os: osx
-osx_image: xcode8
+matrix:
+  fast_finish: true
+  include:
+    - language: cpp
+      os: osx
+      osx_image: xcode8
+    - language: cpp
+      os: osx
+      osx_image: xcode8.1
 
 before_cache:
   - rm -f $HOME/downloads/travis_wait*.log
